Resolved Advance Calculator and confirmed that all tests have passed except memory allocation.